<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignEnd="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="69dp"
        android:text="@string/Tip"
        android:textAlignment="center"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:text="@string/Student_Login"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/User"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/User_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Pass"
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/Pass_word"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="64dp"
        android:text="@string/Login" />

    <Button
        android:id="@+id/Registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="66dp"
        android:text="@string/registration" />

</RelativeLayout>