<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="105dp"
        android:text="@string/select_by"
        android:textAlignment="center"
        android:textSize="@dimen/_26ssp" />

    <Button
        android:id="@+id/ByBus"
        android:layout_width="116dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="398dp"
        android:text="@string/ByBus" />

    <Button
        android:id="@+id/byRoute"
        android:layout_width="116dp"
        android:layout_height="76dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="398dp"
        android:layout_marginEnd="50dp"
        android:text="@string/ByRoute" />

</RelativeLayout>